dpkg (1.15.8.12) UNRELEASED; urgency=low

  [ Updated man page translations ]
  * German (Helge Kreutzmann). Minor fixe(s).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

 -- Helge Kreutzmann <debian@helgefjell.de>  Fri, 06 May 2011 20:36:01 +0200

dpkg (1.15.8.11) stable; urgency=high

  [ Guillem Jover ]
  * Do not segfault on “dpkg -i --no-act”.
  * Add missing semicolon to the vsnprintf() compat declaration.
    Thanks to Robert Millan. Closes: #612203
  * Fix typo in «dpkg-name --overwrite» argument parsing so that it actually
    works at all. Thanks to Ivan Gagis <igagis@gmail.com>. LP: #728708
  * Fix dpkg-split to not corrupt binary part metadata when generating the
    split packages on 32-bit systems.

  [ Raphaël Hertzog ]
  * Fix a regression in dpkg-divert where using --rename led to a failure when
    the rename implies crossing file systems. Thanks to Durk Strooisma for
    spotting it.

  [ Updated dpkg translations ]
  * German (Sven Joachim).

  [ Updated man page translations ]
  * German (Helge Kreutzmann). Minor fixe(s).

 -- Guillem Jover <guillem@debian.org>  Tue, 26 Apr 2011 08:21:04 +0200

dpkg (1.15.8.10) unstable; urgency=low

  * Do not segfault on “update-alternatives --auto” when the link group only
    has alternatives which are dangling symlinks. Closes: #611545

 -- Guillem Jover <guillem@debian.org>  Sun, 30 Jan 2011 20:28:27 +0100

dpkg (1.15.8.9) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Drop Breaks on konqueror to avoid some lenny -> squeeze upgrade
    problems. It was only needed to ensure install-info is installed
    even for partial upgrades. Closes: #610991
  * Do the same for all emacs/jed packages. For jed, the breaks has been
    rendered useless as the maintainers dropped the install-info dependencies
    anyway.

  [ Updated dpkg translations ]
  * Remove space before "…" in several Catalan strings (Jordi Mallach).
  * Romanian (Stan Ioan-Eugen).
