@@ -1,5 +1,9 @@
 dpkg (1.15.8.12) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Do not fail to unpack shared directories missing on the file system
+    from packages being replaced by other packages. Closes: #631808
+
   [ Updated man page translations ]
   * German (Helge Kreutzmann). Minor fixe(s).
 
